add remove files

--- a/load-and-save-timm-models.ipynb
+++ b/load-and-save-timm-models.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "FPN = True\n",
     "model_name = \"pvt_v2_b2_li\"\n",
     "# model_name =\"pvt_v2_b1.pth\"\n",
     "# model_name =\"pvt_v2_b0.pth\"\n",
@@ -57,7 +58,10 @@
     "    if 'stages.3' in key:\n",
     "        new_key = key.replace('stages.3', 'roi_heads.box_head.stage')\n",
     "    else:\n",
-    "        new_key = f\"backbone.bottom_up.{key}\"\n",
+    "        if FPN:\n",
+    "            new_key = f\"backbone.bottom_up.{key}\"\n",
+    "        else:\n",
+    "            new_key= f\"backbone.{key}\"\n",
     "    new_model_dict[new_key] = value\n",
     "new_model_dict.keys()"
    ]
@@ -69,7 +73,8 @@
    "outputs": [],
    "source": [
     "# Save the modified weights\n",
-    "torch.save(new_model_dict, f\"weights/{model_name}_fpn.pth\")"
+    "file_path = f\"weights/{model_name}_fpn.pth\" if FPN else f\"weights/{model_name}.pth\"\n",
+    "torch.save(new_model_dict, file_path)"
    ]
   },
   {
