fix: twins runnable

--- a/load-and-save-timm-models.ipynb
+++ b/load-and-save-timm-models.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,6 +70,8 @@
     "                for stage in prefix_map:\n",
     "                    if stage in key or key.startswith(\"norm\"):\n",
     "                        prefix = \"roi_heads.box_head\"\n",
+    "                    if stage in key:\n",
+    "                        key = key.replace(stage, f\"{stage[:-1]}0\")\n",
     "\n",
     "            new_key = f\"{prefix}.{key}\"\n",
     "            new_model_dict[new_key] = value\n",
